# keshin-go

./: .env.example  .gitignore  LICENSE  README.md  Taskfile.yml  docker-compose.yml  go.mod  go.sum  go.work.sum  keshin.toml  keshin.txt  starting_hood.md
ai/: pyproject.toml
ai/keshin_ai/: config.py  main.py
ai/keshin_ai/emotion/: mapper.py  parser.py
ai/keshin_ai/llm/: base.py  gemini.py  groq.py  ollama.py  openrouter.py  router.py
ai/keshin_ai/pipeline/: context.py  orchestrator.py  steps.py
ai/keshin_ai/translation/: base.py  llm_translate.py
ai/keshin_ai/tts/: base.py  edge_tts.py  kokoro.py  router.py  voicevox.py
ai/tests/: test_emotion.py  test_viseme.py
cmd/keshin/: main.go
docs/: API.md  ARCHITECTURE.md  CONFIG-MERGE.md  LEARNING.md  ROADMAP.md
docs/superpowers/plans/: 2025-06-20-phase-1a-text-pipeline.md  2025-06-20-phase-1b-visual-voice-pipeline.md  2025-06-20-phase-2-voice-desktop.md  2025-06-20-roadmap-execution-strategy.md
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  types.ts
frontend/src/components/: AudioPlayer.tsx  CharacterSelect.tsx  CharacterViewer.tsx  ChatPanel.tsx  StatusBar.tsx  SubtitleOverlay.tsx
internal/bridge/: http_client.go
internal/config/: config.go  defaults.go
internal/pack/: loader.go  pack_test.go  validator.go
internal/server/: handlers_characters.go  handlers_chat.go  server.go
packs/_example/: character.toml
packs/hinata/: MODEL_NOTICE.md  character.toml
schemas/: character.schema.json
scripts/: download-hinata-model.sh  integration_test.sh  setup.sh
(+29 files in other folders)
